[Feat] Added deleting and editing task
