# src/routes/task.routes.js
@@ -1,5 +1,5 @@
 import express from 'express'
-import { changeTaskStatus, createTask, getCompletionSummaryForDay, getTaskById, getTasks } from '../controllers/task.controller.js'
+import { changeTaskStatus, createTask, deleteTask, getCompletionSummaryForDay, getTaskById, getTasks, updateTask } from '../controllers/task.controller.js'
 import { validateTaskCreation } from '../validators/task.validator.js'
 
 const router = express.Router()
@@ -13,5 +13,9 @@ router.get("/by-id/:id", getTaskById)
 router.get("/completion-summary/by-day/:day", getCompletionSummaryForDay)
 
 router.put("/change-status/:id/:status", changeTaskStatus)
+
+router.put("/edit/:id", updateTask)
+
+router.delete("/delete/:id", deleteTask)
 
 export default router;
